[gd_scene load_steps=6 format=2]

[ext_resource path="res://Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://FourPointCourse/ConcaveObstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://FourPointCourse/ConvexObstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hole.tscn" type="PackedScene" id=4]
[ext_resource path="res://FourPointCourse/Move8.gd" type="Script" id=5]

[node name="Map" instance=ExtResource( 1 )]
par = 3
hole = 408

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 0, 20, 6, 0, 21, 6, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 25, 6, 0, 26, 6, 0, 27, 6, 0, 28, 6, 0, 29, 6, 0, 65536, 6, 0, 65537, 0, 0, 65538, 0, 0, 65539, 2, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 20, 0, 65557, 1, 0, 65558, 1, 0, 65559, 25, 0, 65560, 6, 0, 65561, 6, 0, 65562, 6, 0, 65563, 6, 0, 65564, 6, 0, 65565, 6, 0, 131072, 6, 0, 131073, 0, 0, 131074, 2, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 20, 0, 131094, 1, 0, 131095, 1, 0, 131096, 25, 0, 131097, 6, 0, 131098, 6, 0, 131099, 6, 0, 131100, 6, 0, 131101, 6, 0, 196608, 6, 0, 196609, 2, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 20, 0, 196631, 1, 0, 196632, 1, 0, 196633, 25, 0, 196634, 6, 0, 196635, 6, 0, 196636, 6, 0, 196637, 6, 0, 262144, 6, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 11, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 14, 0, 262154, 19, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 21, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 20, 0, 262168, 1, 0, 262169, 1, 0, 262170, 25, 0, 262171, 6, 0, 262172, 6, 0, 262173, 6, 0, 327680, 6, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 3, 0, 327686, 7, 0, 327687, 6, 0, 327688, 6, 0, 327689, 3, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 26, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 14, 0, 327701, 4, 0, 327702, 4, 0, 327703, 4, 0, 327704, 20, 0, 327705, 1, 0, 327706, 1, 0, 327707, 25, 0, 327708, 6, 0, 327709, 6, 0, 393216, 6, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 3, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 3, 0, 393226, 28, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 26, 0, 393231, 3, 0, 393232, 3, 0, 393233, 7, 0, 393234, 6, 0, 393235, 6, 0, 393236, 3, 0, 393237, 4, 0, 393238, 4, 0, 393239, 4, 0, 393240, 4, 0, 393241, 20, 0, 393242, 1, 0, 393243, 1, 0, 393244, 25, 0, 393245, 6, 0, 458752, 6, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 3, 0, 458758, 6, 0, 458759, 6, 0, 458760, 10, 0, 458761, 3, 0, 458762, 3, 0, 458763, 28, 0, 458764, 1, 0, 458765, 1, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 3, 0, 458773, 4, 0, 458774, 4, 0, 458775, 4, 0, 458776, 4, 0, 458777, 4, 0, 458778, 20, 0, 458779, 1, 0, 458780, 1, 0, 458781, 6, 0, 524288, 6, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 23, 0, 524301, 22, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 6, 0, 524306, 6, 0, 524307, 10, 0, 524308, 3, 0, 524309, 14, 0, 524310, 4, 0, 524311, 4, 0, 524312, 4, 0, 524313, 4, 0, 524314, 4, 0, 524315, 20, 0, 524316, 1, 0, 524317, 6, 0, 589824, 6, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 11, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 15, 0, 589837, 10, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 14, 0, 589847, 4, 0, 589848, 4, 0, 589849, 4, 0, 589850, 4, 0, 589851, 4, 0, 589852, 20, 0, 589853, 6, 0, 655360, 6, 0, 655361, 21, 0, 655362, 4, 0, 655363, 11, 0, 655364, 3, 0, 655365, 3, 0, 655366, 7, 0, 655367, 17, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 27, 0, 655378, 1, 0, 655379, 29, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 14, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655389, 6, 0, 720896, 6, 0, 720897, 1, 0, 720898, 21, 0, 720899, 16, 0, 720900, 3, 0, 720901, 7, 0, 720902, 9, 0, 720903, 12, 0, 720904, 17, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 27, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 29, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 14, 0, 720923, 4, 0, 720924, 4, 0, 720925, 6, 0, 786432, 6, 0, 786433, 1, 0, 786434, 1, 0, 786435, 21, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 16, 0, 786442, 3, 0, 786443, 7, 0, 786444, 6, 0, 786445, 6, 0, 786446, 3, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 14, 0, 786460, 4, 0, 786461, 6, 0, 851968, 6, 0, 851969, 23, 0, 851970, 1, 0, 851971, 1, 0, 851972, 21, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 3, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 3, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 29, 0, 851990, 3, 0, 851991, 3, 0, 851992, 7, 0, 851993, 6, 0, 851994, 6, 0, 851995, 3, 0, 851996, 4, 0, 851997, 6, 0, 917504, 6, 0, 917505, 6, 0, 917506, 23, 0, 917507, 1, 0, 917508, 1, 0, 917509, 21, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 3, 0, 917515, 6, 0, 917516, 6, 0, 917517, 10, 0, 917518, 3, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 29, 0, 917527, 3, 0, 917528, 6, 0, 917529, 6, 0, 917530, 6, 0, 917531, 3, 0, 917532, 4, 0, 917533, 6, 0, 983040, 6, 0, 983041, 6, 0, 983042, 6, 0, 983043, 23, 0, 983044, 1, 0, 983045, 1, 0, 983046, 21, 0, 983047, 4, 0, 983048, 4, 0, 983049, 4, 0, 983050, 16, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 5, 0, 983055, 20, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 3, 0, 983064, 6, 0, 983065, 6, 0, 983066, 10, 0, 983067, 3, 0, 983068, 4, 0, 983069, 6, 0, 1048576, 6, 0, 1048577, 6, 0, 1048578, 6, 0, 1048579, 6, 0, 1048580, 23, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 21, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 20, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 18, 0, 1048599, 16, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 5, 0, 1048604, 19, 0, 1048605, 6, 0, 1114112, 6, 0, 1114113, 6, 0, 1114114, 6, 0, 1114115, 6, 0, 1114116, 6, 0, 1114117, 23, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 21, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1114139, 19, 0, 1114140, 1, 0, 1114141, 6, 0, 1179648, 6, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 23, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 21, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179673, 4, 0, 1179674, 19, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 6, 0, 1245184, 6, 0, 1245185, 6, 0, 1245186, 6, 0, 1245187, 6, 0, 1245188, 6, 0, 1245189, 6, 0, 1245190, 6, 0, 1245191, 6, 0, 1245192, 6, 0, 1245193, 6, 0, 1245194, 6, 0, 1245195, 6, 0, 1245196, 6, 0, 1245197, 6, 0, 1245198, 6, 0, 1245199, 6, 0, 1245200, 6, 0, 1245201, 6, 0, 1245202, 6, 0, 1245203, 6, 0, 1245204, 6, 0, 1245205, 6, 0, 1245206, 6, 0, 1245207, 6, 0, 1245208, 6, 0, 1245209, 6, 0, 1245210, 6, 0, 1245211, 6, 0, 1245212, 6, 0, 1245213, 6, 0 )

[node name="Water" type="Area2D" parent="." index="2"]

[node name="Collision" type="CollisionPolygon2D" parent="Water" index="0"]
visible = false
position = Vector2( 320, 288 )
polygon = PoolVector2Array( -160, -128, -160, 0, -224, 64, -192, 96, -128, 96, -96, 64, -64, 96, -32, 96, 0, 128, 0, 192, 32, 224, 128, 224, 160, 192, 160, 96, 192, 64, 224, 64, 256, 32, 288, 32, 352, 96, 352, 128, 416, 192, 416, 224, 448, 256, 544, 256, 576, 224, 576, 128, 512, 64, 480, 64, 448, 32, 416, 32, 352, -32, 352, -96, 320, -128, 224, -128, 192, -96, 160, -96, 128, -64, 128, 0, 96, 0, 0, -96, 0, -128, -32, -160, -128, -160 )

[node name="Collision4" type="CollisionPolygon2D" parent="Grass" index="3"]
visible = false
position = Vector2( 392, 208 )
polygon = PoolVector2Array( -40, -80, -72, -48, -72, -16, 24, 80, 56, 48, 56, 16, 88, -16, 120, -16, 152, -48, 120, -80 )

[node name="Collision5" type="CollisionPolygon2D" parent="Grass" index="4"]
visible = false
position = Vector2( 552, 432 )
polygon = PoolVector2Array( -40, -80, -72, -48, -72, -16, -72, 48, -8, 112, 152, 112, 184, 80, 184, 48, 120, -16, 120, -48, 56, -112, 24, -112, -8, -80 )

[node name="Hole" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 584, 400 )

[node name="Move" type="Node2D" parent="." index="6"]
script = ExtResource( 5 )

[node name="ConvexObstacle" parent="Move" index="0" instance=ExtResource( 3 )]
position = Vector2( 400, 128 )

[node name="ConvexObstacle2" parent="Move" index="1" instance=ExtResource( 3 )]
position = Vector2( 824, 216 )

[node name="ConvexObstacle3" parent="Move" index="2" instance=ExtResource( 3 )]
position = Vector2( 80, 288 )

[node name="ConcaveObstacle" parent="Move" index="3" instance=ExtResource( 2 )]
position = Vector2( 568, 376 )

[node name="ConcaveObstacle2" parent="Move" index="4" instance=ExtResource( 2 )]
position = Vector2( 600, 424 )

[connection signal="body_entered" from="Water" to="." method="_on_Water_body_entered"]
[connection signal="body_exited" from="Water" to="." method="_on_Water_body_exited"]
[connection signal="body_entered" from="Hole" to="." method="_on_Hole_body_entered"]
